@@ -99,6 +99,16 @@ int module_hash_decode (MAYBE_UNUSED const hashconfig_t *hashconfig, MAYBE_UNUSE
 
   hc_token_t token;
 
+  if (line_len < 11) return (PARSER_SALT_LENGTH);
+
+  /**
+   * Checking the signature for performance optimization
+   */
+
+  if (strncmp(line_buf, SIGNATURE_KRB5DB, strlen (SIGNATURE_KRB5DB))) {
+    return (PARSER_SIGNATURE_UNMATCHED);
+  }
+
   memset (&token, 0, sizeof (hc_token_t));
 
   token.signatures_cnt    = 1;
@@ -112,9 +122,6 @@ int module_hash_decode (MAYBE_UNUSED const hashconfig_t *hashconfig, MAYBE_UNUSE
    * $krb5db$17$user$realm$hash
    * $krb5db$17$user$realm$*spn*$hash
    */
-
-  // assume no signature found
-  if (line_len < 11) return (PARSER_SALT_LENGTH);
 
   char *spn_info_start  = strchr (line_buf + 11 + 1, '*');
 
